Fix input bar bleeding into nicklist & mobile input bar jumps
Closes #298

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -110,7 +110,7 @@ input[type=text], input[type=password], #sendMessage, .badge {
     width: 100%;
     height: 35px;
     max-height: 35px;
-    z-index: 2;
+    z-index: 3;
     line-height: 35px;
     white-space: nowrap;
 }
@@ -282,6 +282,9 @@ input[type=text], input[type=password], #sendMessage, .badge {
     margin-left: 0;
     padding-left: 145px;
 }
+.footer.withnicklist {
+    padding-right: 100px;
+}
 
 .color-light-green {
     color: chartreuse;
@@ -375,7 +378,7 @@ h2 span, h2 small {
 
     #sidebar {
         font-size: normal;
-        z-index: 1;
+        z-index: 2;
         bottom: 0px;
         width: auto;
         max-width: 60%;
@@ -456,6 +459,14 @@ h2 span, h2 small {
 
     #bufferlines td.prefix:after {
         content: ">";
+    }
+
+    .footer {
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+        width: 100% !important;
+        background: rgb(24,24,24);
+        z-index: 1;
     }
 
     ::-webkit-scrollbar {
